--- a/views/index.pug
+++ b/views/index.pug
@@ -10,8 +10,8 @@ block layout-content
       span.Details Developed by Matt Shenton
     div.NavButtons
       if isAuthenticated
-        a(href="/users")
-          div.NavButton Click me! here here
+        a(href="/logout")
+          div.NavButton logout
       else
         a(href="/login")
             div.NavButton Log in
