--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,7 +5,7 @@ html
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1 shrink-to-fit=no")
     meta(name="theme-color", content="#000000")
-    title #{title} | Hello World
+    title NBA Derby
     link(rel="stylesheet" href="/style.css")
   body
     div#root
