--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,8 @@ html
     meta(name="viewport", content="width=device-width, initial-scale=1 shrink-to-fit=no")
     meta(name="theme-color", content="#000000")
     title NBA Derby
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap" rel="stylesheet">
     link(rel="stylesheet" href="/style.css")
   body
     div#root
