--- a/public/style.css
+++ b/public/style.css
@@ -13,3 +13,11 @@ body {
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
+
+.NavButtons {
+  padding-top: 10%;
+}
+button {
+  font-size: 16px;
+  width: 60%;
+}
