Display available players in basic table

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,7 @@ html
     title NBA Derby
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap" rel="stylesheet">
-    link(rel="stylesheet" href="/style.css")
+    link(rel="stylesheet" href="/css/home.css")
   body
     div#root
       block layout-content
