--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,12 +1,12 @@
 body {
-  background-image: url('./assets/placeholder-background.png')
+  background-image: url('../assets/placeholder-background.png');
+  color: azure;
+  font-family: 'Barlow', sans-serif;
 }
 
 .View {
   font-weight: bolder;
-  color: azure;
   text-align: center;
-  font-family: 'Barlow', sans-serif;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -17,6 +17,7 @@ body {
 .NavButtons {
   padding-top: 10%;
 }
+
 button {
   font-size: 16px;
   width: 60%;
