--- a/public/css/active_players.css
+++ b/public/css/active_players.css
@@ -7,3 +7,20 @@
 .PlayerInfo {
   font-style: italic;
 }
+
+.SelectPlayerButton {
+  float: right;
+  width: 50%;
+  margin: 0;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  padding-right: 5%;
+}
+
+button {
+  float: right;
+  font-family: 'Barlow', sans-serif;
+  background-color: rgb(224, 224, 224);
+  border-radius: 4px;
+}
