Refactored players endpoint

--- a/views/active_players.pug
+++ b/views/active_players.pug
@@ -15,7 +15,7 @@ block layout-content
                     p #{player.first_name} #{player.last_name}
                   div.PlayerInfo
                     p #{player.position}, #{player.team_name}
-                if playerAvailable(player.player_id)
+                unless userSelections.has(parseInt(player.player_id))
                   form(class="player-select", method="POST" action="/players/selection")
                     div.SelectPlayerButton
                       button(class="btn btn-small" type="submit") Select Player
